--- a/src/index.html
+++ b/src/index.html
@@ -8,16 +8,9 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
-
-    <main>
-      <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
-    </main>
-
-    <load src="./partials/footer.html" />
-
-    <script type="module" src="./main.js"></script>
+    <ul class="ul-link">
+      <li><a href="./1-timer.html" class="link">Timer</a></li>
+      <li><a href="./2-snackbar.html" class="link">Snackbar</a></li>
+    </ul>
   </body>
 </html>
